# portListener

./: README.md
untitled1/: CMakeLists.txt  ComPlat.qml  Main.qml  MyAboutPage.qml  MyGraphPage.qml  MyPrePage.qml  MySendPage.qml  TcpcUdp.qml  Tcps.qml  main.cpp  portcontroller.cpp  portcontroller.h
